Fixed logout button visibility after scrolling down.

--- a/RentDrive.Frontend/public/assets/css/templatemo-plot-listing.css
+++ b/RentDrive.Frontend/public/assets/css/templatemo-plot-listing.css
@@ -266,9 +266,11 @@ header
 }
 
 .background-header .logo,
-.background-header .main-nav .nav li a {
+.background-header .main-nav .nav li a,
+.background-header .logout-button{
   color: #1e1e1e!important;
 }
+
 
 .background-header .main-nav .nav li:hover a {
   color: #8d99af!important;
